--- a/src/app/component/footer/footer.html
+++ b/src/app/component/footer/footer.html
@@ -38,5 +38,7 @@
 
     <div class="footer-bottom">
         <p>&copy; 2025 ClothesShop. All rights reserved.</p>
+        <p>Created by phuocc (olalaz13)</p>
     </div>
+
 </footer>
