--- a/src/app/component/shop/shop.html
+++ b/src/app/component/shop/shop.html
@@ -151,4 +151,4 @@
 </main>
 <!-- filters -->
 <div id="filtersOverlay" class="overlay" (click)="closeSidebar()" [class.show]="isSidebarOpen"></div>
-<button id="toggleFilters" class="btn btn-primary show-on-mobile" title="Filters" (click)="toggleFilters()">Filters</button>
+<button id="toggleFilters" class="btn btn-primary show-on-mobile" style="background-color: rgb(72, 72, 253);" title="Filters" (click)="toggleFilters()">Filters</button>
